# uwp-cmake

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  package.appxmanifest
.github/workflows/: cmake.yml  codeql-analysis.yml
assets/: CMakeLists.txt  Icon.gvdesign
include/: App.h  CMakeLists.txt  pch.h
src/: App.cpp  CMakeLists.txt
